--- a/datasetCode/dataset_2_generator/mapping/web-dsl-mapping.json
+++ b/datasetCode/dataset_2_generator/mapping/web-dsl-mapping.json
@@ -7,6 +7,7 @@
   "col": "<div class=\"col\">\n{}\n</div>\n",
   "leaf_col": "<div class=\"col leaf-col\">\n{}\n</div>\n<div class=\"w-100\"></div>\n",
   "button": "<a class=\"btn $bg_color $color\">$content</a>",
+  "btn": "<a class=\"btn $bg_color $color\">$content</a>",
   "span_text": "<span class=\" $color\">$content</span>",
   "icon":"<span class=\" $icon $color\"></span>",
   "big-title": "<h2 class=\" $color\">$content</h2>",
